<resources>
    <string name="app_name">Registration App</string>
    <string name="text1">Registration Form</string>
    <string name="text2">Welcome to Adventure Learning Club!</string>
    <string name="text3">Full Name</string>
    <string name="text4">First Name</string>
    <string name="text5">Last Name</string>
    <string name="text6">Gender</string>
    <string name="text7">Male</string>
    <string name="text8">Female</string>
    <string name="text9">Other</string>
    <string name="text10">Prefer not to say</string>
    <string name="text11">Student ID</string>
    <string name="text12">School</string>
    <string name="text13">Email</string>
    <string name="text14">Phone</string>
    <string name="text15">Register</string>
</resources>